--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ If your plugin does not need CSS, delete this file.
     width: 50%;
 }
 
-.infobox h2 {
-    background-color: #606BBE;
+.infobox h1 {
+    background-color: rgb(96, 107, 190);
     width: 50%;
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -26,4 +26,35 @@ If your plugin does not need CSS, delete this file.
     margin: 0;
     font-family: ui-sans-serif,
         -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Inter", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei Light", sans-serif;
+}
+
+.infobox-content {
+    display: flex;
+    width: 50%;
+    background-color: rgba(96, 107, 190, 0.6);
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0.75rem;
+}
+
+.subdiv {
+    display: flex;
+    justify-content: space-between;
+}
+
+.subdiv p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-family: ui-sans-serif,
+        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Inter", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei Light", sans-serif;
+}
+
+.listdiv {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+}
+
+.infobox p {
+    margin: 0;
 }
