--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ If your plugin does not need CSS, delete this file.
 }
 
 .infobox h1 {
-    background-color: rgb(96, 107, 190);
+    background-color: var(--color-accent);
     width: 50%;
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -31,7 +31,7 @@ If your plugin does not need CSS, delete this file.
 .infobox-content {
     display: flex;
     width: 50%;
-    background-color: rgba(96, 107, 190, 0.6);
+    background-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.6);
     flex-direction: column;
     gap: 1rem;
     padding: 0.75rem;
@@ -42,7 +42,8 @@ If your plugin does not need CSS, delete this file.
     justify-content: space-between;
 }
 
-.subdiv p {
+.subdiv p,
+.subdiv a {
     font-size: 1rem;
     line-height: 1.5rem;
     font-family: ui-sans-serif,
