--- a/styles.css
+++ b/styles.css
@@ -7,40 +7,38 @@ If your plugin does not need CSS, delete this file.
 
 */
 
+
 .infobox {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 	place-items: center;
+	width: min-content;
+	overflow: hidden;
+	border-radius: 0.375rem;
 }
 
 .infobox img {
-	width: 50%;
+	object-fit: fill;
+	width: auto;
+	height: auto;
 }
 
 .infobox h1 {
 	background-color: var(--color-accent);
-	width: 50%;
+	margin: 0;
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 	text-align: center;
-	padding: 0.5rem;
-	margin: 0;
-	font-family:
-		ui-sans-serif,
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		"Inter",
-		"Apple Color Emoji",
-		"Segoe UI Emoji",
-		"Segoe UI Symbol",
-		"Microsoft YaHei Light",
-		sans-serif;
+	min-width: 20rem;
+	padding: 0.75rem;
+	white-space: nowrap;
+	font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, "Inter", "Apple Color Emoji", "Segoe UI Emoji",
+		"Segoe UI Symbol", "Microsoft YaHei Light", sans-serif;
 }
 
 .infobox-content {
 	display: flex;
-	width: 50%;
 	border-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.5);
 	border-bottom-width: 2px;
 	border-right-width: 2px;
@@ -51,45 +49,31 @@ If your plugin does not need CSS, delete this file.
 	flex-direction: column;
 	gap: 1rem;
 	padding: 0.75rem;
+	width: 100%;
 }
 
-.subdiv {
+.field-div {
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
 }
+
 
 .title {
 	font-weight: 700;
 }
 
-.content {
-	width: 50%;
-}
-
-.subdiv p,
-.subdiv a {
+.field-div p,
+.field-div a {
 	font-size: 1rem;
 	line-height: 1.5rem;
-	font-family:
-		ui-sans-serif,
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		"Inter",
-		"Apple Color Emoji",
-		"Segoe UI Emoji",
-		"Segoe UI Symbol",
-		"Microsoft YaHei Light",
-		sans-serif;
+	font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, "Inter", "Apple Color Emoji", "Segoe UI Emoji",
+		"Segoe UI Symbol", "Microsoft YaHei Light", sans-serif;
 }
 
 .listdiv {
 	display: flex;
 	width: 50%;
 	flex-direction: column;
-}
-
-.infobox p {
-	margin: 0;
 }
