--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ If your plugin does not need CSS, delete this file.
 
 .infobox-content {
 	display: flex;
-	border-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.5);
+	border-color: hsla(var(--accent-h), var(--accent-s), var(--accent-l), 0.2);
 	border-bottom-width: 2px;
 	border-right-width: 2px;
 	border-left-width: 2px;
@@ -56,6 +56,7 @@ If your plugin does not need CSS, delete this file.
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	gap: 1rem;
 }
 
 
@@ -76,4 +77,5 @@ If your plugin does not need CSS, delete this file.
 	display: flex;
 	width: 50%;
 	flex-direction: column;
+	place-items: end;
 }
